# BroadTrack

./: .gitattributes  CMakeLists.txt  Camera.cpp  Camera.h  CameraTracker.cpp  CameraTracker.h  Chronometer.h  Dockerfile  JsonCalibDict.cpp  JsonCalibDict.h  KeypointDetectionModel.cpp  KeypointDetectionModel.h  LICENSE  LineIoUScore.cpp  LineIoUScore.h  LineSegmentationModel.cpp  LineSegmentationModel.h  PointExtractor.cpp  PointExtractor.h  README.md  Residuals.h  SoccerPitch3D.cpp  SoccerPitch3D.h  core.cpp  core.h  main.cpp  singleFrameCalibration.cpp
models/: nbjw_keypoint_model.pt  tvcalib_model.pt
scripts/: compute_tripod.py  requirements.txt  run_gsr.sh
